# chain-reaction

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  getting-started.ipynb  langgraph.json  main.py  pyproject.toml  template.env
.claude/: .gitignore  CLAUDE.md  README.md  development-conventions.md  frameworks.md  manifest.json
.claude/agent-outputs/pr-descriptions/: .gitignore
.claude/agents/: code-cleaner.md  code-review-orchestrator.md  code-style-reviewer.md  code-substance-reviewer.md  planner.md  python-code-reviewer.md  python-code-writer.md  python-test-writer.md  test-reviewer.md
.claude/commands/: add-framework.md  clean.md  create-skill.md  implement-and-review.md  implement.md  plan.md  pr-description.md  review-tests.md  review.md  sync-context.md  sync.md  update-plan.md
.claude/development-conventions/: README.md  data-structures.md  documentation.md  functions.md  naming.md  organization.md  patterns.md  testing.md  typing.md
.claude/plans/: .gitignore
.claude/plans/examples/: example-bugfix.md  example-refactor.md  example-simple-feature.md
.claude/reviews/: .gitignore
.claude/scripts/: generate_bundles.py  sync_context.py  test_generate_bundles.py  test_sync_context.py  test_validate_manifest.py  validate_manifest.py
.claude/skills/: manifest.json
.claude/skills/class-design/: SKILL.md  examples.md  rules.md
.claude/skills/code-organization/: SKILL.md
.claude/skills/complexity-refactoring/: SKILL.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/data-structures/: SKILL.md
.claude/skills/docstring-conventions/: SKILL.md
.claude/skills/explore-project/: SKILL.md
.claude/skills/frameworks/: SKILL.md
.claude/skills/function-design/: SKILL.md
.claude/skills/maintainability/: SKILL.md
.claude/skills/naming-conventions/: SKILL.md
.claude/skills/plan-template/: SKILL.md  example-bugfix.md  example-feature.md  example-refactor.md
.claude/skills/pr-description-template/: example-bugfix.md  example-feature.md  example-refactor.md  skill.md
.claude/skills/pythonic-conventions/: SKILL.md  examples.md  rules.md
.claude/skills/review-template/: SKILL.md
.claude/skills/run-python-safely/: SKILL.md
.claude/skills/run-python-safely/scripts/: run_python_safely.py  test_run_python_safely.py
.claude/skills/skill-template/: SKILL.md
.claude/skills/sync-context/: SKILL.md
.claude/skills/test-quality/: SKILL.md  examples.md  rules.md
.claude/skills/test-writing/: SKILL.md
.claude/skills/testability/: SKILL.md  examples.md  rules.md
.claude/skills/testing/: SKILL.md
.claude/skills/type-hints/: SKILL.md
.claude/skills/validate-manifest/: SKILL.md
.claude/skills/write-markdown-output/: SKILL.md
.claude/skills/write-markdown-output/scripts/: write_markdown_output.py
.claude/usage-guides/: agentic-coding-workflow.md  context-window-management.md  reviewer-friendly-prs.md  thinking-llms-guide.md  understanding-llm-coding-agents.md
1-langchain-fundamentals/: 1-prompts-and-responses.ipynb  10-dynamic-angents.ipynb  2-short-term-memory.ipynb  3-create-an-agent.ipynb  3-intro-to-chains.ipynb  3.1-ollama-agent.ipynb  4-agent-tools.ipynb  4-create-an-agent.ipynb  4.1-cache-tool-calls.ipynb  5-short-term-memory.ipynb  6-context-and-state.ipynb  7-multi-agent-systems.ipynb  8-managing-long-conversations.ipynb  9-human-in-the-loop.ipynb  README.md
1-langchain-fundamentals/agents/: scifi_writer.py
2-langgraph-fundamentals/: 1-simple-graph.ipynb  README.md
3-mcp-fundamentals/1-bayesian-tools/: README.md  agent.ipynb  server.py
agents/: scifi_writer.py
mcp-servers/: mcp-fundamentals.md
notebooks/: dynamic-angents.ipynb  human-in-the-loop.ipynb  multi-agent-systems.ipynb
notebooks/fundamentals/: create-an-agent.ipynb  getting-started.ipynb  intro-to-chains.ipynb  prompts-and-responses.ipynb  simple-graph.ipynb
notebooks/memory-context-state/: compile-graph-w-memory.ipynb  context-and-state.ipynb  short-term-memory.ipynb
notebooks/tools/: agent-tools.ipynb  cache-tool-calls.ipynb  dataframe-agent.ipynb  handling-tool-call-errors.ipynb  react-agent-graph.ipynb  recusion-limits.ipynb  sql-agent.ipynb
src/chain_reaction/: __init__.py  caching.py  config.py  links.py  memory.py  state.py  utils.py
src/chain_reaction/dataframe_toolkit/: __init__.py  context.py  exceptions.py  identifier.py  models.py  persistence.py  registry.py  sql_utils.py  toolkit.py
tests/: __init_.py  test_caching.py
tests/dataframe_toolkit/: __init__.py  test_context.py  test_exceptions.py  test_models.py  test_persistence.py  test_sql_utils.py  test_toolkit.py
tests/dataframe_toolkit/test_models/: test_dataframe_reference.py  test_dataframe_toolkit_state.py  test_tool_call_error.py
tests/dataframe_toolkit/test_toolkit/: test_registration.py  test_state.py  test_tools.py
