[project]
name = "chain-reaction"
version = "0.1.0"
description = "My incremental journey learning to create agentic workflows with LangChain and LangGraph."
readme = "README.md"
requires-python = ">=3.13,<3.14" # jsonschema-rs requires 3.13
dependencies = [
    "diskcache>=5.6.3",
    "fastmcp>=2.14.2",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph-cli[inmem]>=0.4.11",
    "loguru>=0.7.3",
    "polars>=1.37.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "tavily-python>=0.7.17",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "pre-commit>=4.4.0",
    "pytest>=9.0.2",
    "pytest-check>=2.6.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a26",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

# pydoclint configuration
[tool.pydoclint]
style = "google"
allow-init-docstring = true
exclude = '\.venv/|\\.git|\\.tox|tests/data'

# Pytest & coverage configuration
[tool.pytest.ini_options]
addopts = "-rf --doctest-modules --doctest-continue-on-failure --strict-markers"
cache_dir = "./build/pytest"
console_output_style = "progress"
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
  "src",
  "tests",
]

[tool.coverage.run]
branch = true
data_file = "build/.coverage"

[tool.coverage.report]
fail_under = 90
omit = [
]
exclude_also = [
    "def __repr__"
]
precision = 1
show_missing = true
skip_covered = true
skip_empty = true

# Ruff configuration
[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
line-length = 120
indent-width = 4
preview = true # Enable preview features.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "F",        # pyflakes
  "E", "W",   # pycodestyle
  "C90",      # mccabe max-complexity
  "I",        # isort
  "N",        # pep8-naming
  "D",        # pydocstyle
  "UP",       # pyupgrade
  "ANN",      # flake8-annotations
  "S",        # flake8-bandit
  "BLE",      # flake8-blind-except
  "FBT",      # flake8-boolean-trap
  "B",        # flake8-bugbear
  "A",        # flake8-builtins
  "C4",       # flake8-comprehensions
  "ISC",      # flake8-implicit-str-concat
  "ICN",      # flake8-import-conventions
  "Q",        # flake8-quotes
  "SIM",      # flake8-simplify 
  "TID",      # flake8-tidy-imports 
  "ARG",      # flake8-unused-arguments
  "PTH",      # flake8-use-pathlib
  "PL",       # pylint
  "RUF",      # Ruff-specific rules
]
ignore = [
  "ANN401",   # Allow any-type
  "ISC001",   # Ignore single-line-implicit-string-concatenation for ruff format
  "FBT003",   # Allow boolean pos values in func calls, like `dict.get(... True)`
]
per-file-ignores = {"**/{tests}/*" = [ 
  # Tests can use magic values, assertions, and relative imports
  "PLR2004", "S101", "TID252",
]}
extend-unsafe-fixes = ["E", "F401"]

flake8-tidy-imports = {ban-relative-imports = "all"}
mccabe = {max-complexity = 5}
isort = {known-first-party = ["imagescry", "tests"]}
pydocstyle = {convention = "google"}
pylint = {allow-magic-value-types = ["int", "str"], max-args = 15, max-positional-args = 5, max-locals = 25}


## ty configuration
[tool.ty.src]
include = ["src", "tests"]
exclude = [".venv/"]
